fixed howtoall nav items from wrapping

--- a/css/index.css
+++ b/css/index.css
@@ -461,7 +461,7 @@ footer {
 }
 @media (max-width: 600px) {
   .step .step-text p {
-    font-size: 0.1px;
+    font-size: 10px;
   }
 }
 .carousel {
@@ -596,4 +596,10 @@ body {
 .cta .cta-text button:hover {
   background: black;
   color: white;
+}
+nav a {
+  font-size: 16px;
+}
+.header a {
+  font-size: 22px;
 }
