--- a/less/howto.less
+++ b/less/howto.less
@@ -212,7 +212,7 @@
         font-size: 12px;
       }
       @media(max-width: 600px){
-        font-size: .1px;
+        font-size: 10px;
       }
   
 }
@@ -296,4 +296,11 @@
 .cta .cta-text button:hover {
     background: black;
     color: white;
+}
+
+nav a {
+  font-size: 16px;
+}
+.header a {
+  font-size: 22px;
 }
